
=== 1.0.1 (2017-08-04) ===
FIXED: to formally support FTN3 v1.5 for executor

=== 1.0.0 (2017-08-03) ===
BREAKING: removed bower support
NEW: FTN3 v1.5 support

=== 0.9.1 (2017-07-20) ===
FIXED: readme file

=== 0.9.0 (2017-07-19) ===
CHANGED: to accept null values for default "null" params
CHANGED: changed to allow type definition shortcut as per FTN3 v1.4
CHANGED: imports handling to workaround diamond problem as per FTN3: v1.4
NEW: FTN3 v1.4 support

=== 1.5.8 (2017-07-09) ===
FIXED: re-publish with proper npm packaging

=== 0.8.4 (2017-07-09) ===
CHANGED: to use FutoIn CID tool for development
NEW: Revised development tools